[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "karbon"
version = "0.2.0"
description = "Turn mouse events into art!"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
keywords = ["mouse tracking", "mouse", "tracking", "karbon"]
authors = [
    { name = "Furkan Onder", email = "furkanonder@protonmail.com" },
    {name = "Bahadır Araz", email = "bahadiraraz@protonmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture",
    "Topic :: Artistic Software",
]
dependencies = [
    "pygame-ce==2.5.1",
    "pygame-gui==0.6.12",
    "pynput==1.7.6",
    "screeninfo>=0.8.1",
]

[project.urls]
"Homepage" = "https://github.com/furkanonder/karbon"
"Bug Reports" = "https://github.com/furkanonder/karbon/issues"
"Source" = "https://github.com/furkanonder/karbon"

[project.scripts]
karbon = "karbon.__main__:main"

[tool.docformatter]
recursive = true
wrap-summaries = 79
wrap-descriptions = 79
blank = true

[tool.mypy]
warn_unused_configs = true
no_strict_optional = true
ignore_missing_imports = true
show_error_codes = true

[tool.ruff]
line-length = 119
lint.select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade,
  "I",   # isort
]
lint.mccabe = { max-complexity = 14 }
