[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "karbon"
dynamic = ["version"]
description = "Turn mouse events into art!"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["mouse tracking", "mouse", "tracking", "art", "visualization", "graphics", "pygame", "drawing"]
authors = [
    {name = "Furkan Onder", email = "furkanonder@protonmail.com"}
]
maintainers = [
    {name = "Furkan Onder", email = "furkanonder@protonmail.com"},
    {name = "Bahadır Araz", email = "bahadiraraz@protonmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Artistic Software",
    "Topic :: Desktop Environment",
    "Topic :: System :: Monitoring",
    "Natural Language :: English",
]
dependencies = [
    "pygame-ce==2.5.5",
    "pygame-gui==0.6.14",
    "pynput==1.8.1",
    "screeninfo>=0.8.1",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.3.0",
    "tox>=4.30.2",
    "mypy>=1.18.2",
    "ruff>=0.13.1",
    "pytest>=8.4.2",
]

[project.urls]
"Homepage" = "https://github.com/furkanonder/karbon"
"Documentation" = "https://github.com/furkanonder/karbon#readme"
"Repository" = "https://github.com/furkanonder/karbon"
"Bug Reports" = "https://github.com/furkanonder/karbon/issues"
"Changelog" = "https://github.com/furkanonder/karbon/blob/main/CHANGELOG.MD"
"Funding" = "https://github.com/sponsors/furkanonder"

[project.scripts]
karbon = "karbon.__main__:main"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools_scm]
write_to = "src/karbon/_version.py"
write_to_template = '''"""
Version file for karbon.

This file is auto-generated by setuptools_scm.
"""
__version__ = "{version}"
'''

[tool.docformatter]
recursive = true
wrap-summaries = 119
wrap-descriptions = 119
blank = true
make-summary-multi-line = false
close-quotes-on-newline = true

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
no_implicit_optional = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_reexport = true
strict_optional = true
ignore_missing_imports = true
show_error_codes = true
show_column_numbers = true
pretty = true

[tool.ruff]
line-length = 119
unsafe-fixes = false

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "UP",    # pyupgrade
    "I",     # isort
    "N",     # pep8-naming
    "YTT",   # flake8-2020
    "BLE",   # flake8-blind-except
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "COM",   # flake8-commas
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "EXE",   # flake8-executable
    "FA",    # flake8-future-annotations
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "G",     # flake8-logging-format
    "INP",   # flake8-no-pep420
    "PIE",   # flake8-pie
    "T20",   # flake8-print
    "PYI",   # flake8-pyi
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SLF",   # flake8-self
    "SLOT",  # flake8-slots
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "TCH",   # flake8-type-checking
    "INT",   # flake8-gettext
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "PL",    # pylint
    "FLY",   # flynt
    "PERF",  # Perflint
    "RUF",   # Ruff-specific rules
]
ignore = [
    "PLR2004", # Magic value used in comparison
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
